--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -2,6 +2,18 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+}
 
+body{
     background-color: #0f2127;
+}
+
+.sideoverskrift{
+    border-bottom: 1px solid #cea948;
+    width:100%;
+}
+
+.sideoverskrift h1{
+    position:relative;
+    top:45px;
 }
