--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -9,11 +9,13 @@ body{
     margin:10%;
 }
 
+/*SIDENS HOVEDOVERSKRIFT*/
 .sideoverskrift{
     border-bottom: 1px solid #cea948;
     width:100%;
 
     padding-left:30%;
+    margin-bottom:100px;
     
     
 }
@@ -29,4 +31,21 @@ body{
     font-weight:500;
     font-size: 40pt;
     color:#cea948;
+}
+
+/*CARD STYLE: VORES UDVALG*/
+
+
+main section:nth-child(2){
+    display:flex;
+    flex-direction: row;
+
+    background-color: #204653;
+
+    color:#cea948;
+}
+
+main div:first-child img{
+    width:150%;
+    height:150%;
 }
