--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -39,6 +39,7 @@
 }
 
 /*Kort*/
+/*Kort et*/
 .cardet{
     display: flex;
     justify-content: center;
@@ -59,6 +60,92 @@
     width: 50%;
     text-align: left;
     background-color: #2F667A;
-    padding: 50px;
+    padding: 100px;
     color: #CEA948;
+}
+
+/*Kort to*/
+.cardto{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 400px;
+}
+
+.imageto{
+    width: 50%;
+    background: url(images/brætspil.png);
+    background-size: cover;
+    display: flex;
+}
+
+.textto{
+    width: 50%;
+    text-align: left;
+    background-color: #2F667A;
+    color: #CEA948;
+    padding: 100px;
+}
+
+/*Kort tre*/
+.cardtre{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 400px;
+}
+
+.imagetre{
+    width: 50%;
+    background: url(images/ølsmagninger.png);
+    background-size: cover;
+
+}
+
+.texttre{
+    width: 50%;
+    text-align: left;
+    background-color: #2F667A;
+    color: #CEA948;
+    padding: 100px;
+}
+
+.button{
+    color: #CEA948;
+    background-color: #0F2127;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 20px;
+  }
+
+/*Kort fire*/
+.cardfire{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 400px;
+}
+
+.imagefire{
+    width: 50%;
+    background: url(images/fodbold.png);
+    background-size: cover;
+}
+
+.textfire{
+    width: 50%;
+    text-align: left;
+    background-color: #2F667A;
+    color: #CEA948;
+    padding: 100px;
+}
+
+/*Image hover*/
+.image .imageto .imagetre .imagefire:hover img{
+    transform: scale(1,5);
 }
