--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -10,7 +10,7 @@ body{
 }
 
 /*SIDENS HOVEDOVERSKRIFT*/
-.sideoverskrift{
+/*.sideoverskrift{
     border-bottom: 1px solid #cea948;
     width:100%;
 
@@ -31,12 +31,47 @@ body{
     font-weight:500;
     font-size: 40pt;
     color:#cea948;
+}*/
+
+.sideoverskrift{
+    margin: 100px auto 100px;
+    text-align: center;
+    max-width: 820;
+    position: relative;
+    
+    color: #CEA948;
+    font-size: 30pt;
+}
+
+.sideoverskrift:before{
+    content:'';
+    display: block;
+    width: 300px;
+   height: 1px;
+
+   background: #CEA948;
+   position: absolute;
+   left: 10%;
+   top: 50%;
+}
+
+.sideoverskrift:after{
+    content:'';
+    display: block;
+    width: 300px;
+   height: 1px;
+
+   background:#CEA948; 
+   position: absolute;
+   right: 10%;
+   top: 50%;
 }
 
 /*CARD STYLE: VORES UDVALG*/
 main section:nth-child(2){
     display:flex;
     flex-direction: row;
+
 
     border:1px solid #cea948;
     background-color: #204653;
