--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -11,7 +11,7 @@ body{
 
 /*SIDENS HOVEDOVERSKRIFT*/
 .sideoverskrift{
-    margin: 100px auto 100px;
+    margin: 10px auto 100px;
     text-align: center;
     max-width: 820;
     position: relative;
@@ -44,11 +44,26 @@ body{
    top: 50%;
 }
 
+/*TOP BILLEDE*/
+main .topbillede{
+    background-image: url(images/ølspecialiteter.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height:500px;
+}
+
+/*BØLGER*/
+.bølger img{
+    width:100%;
+    position:relative;
+    bottom:100px; /*Skubber bølgen op over billedet med position relative*/
+}
+
 /*CARD STYLE: VORES UDVALG*/
-main section:nth-child(3){
+.kortudvalg{
     display:flex;
     flex-direction: row;
-
 
     border:1px solid #cea948;
     background-color: #204653;
@@ -63,40 +78,35 @@ main section:nth-child(3){
     margin-left:10%;
 }
 
-main div:first-child{
+.kortudvalg div:first-child{
     width:125%;
 }
 
-main div:first-child img{
+.kortudvalg div:first-child img{
     width:100%;
     height:100%;
-
-    /*background-image: url(images/udvalg2.png);
-    background-size: cover;*/
 
     border-radius: 20px;
     border:2px solid #cea948;
 
 }
 
-main div:nth-child(2){
+.kortudvalg div:nth-child(2){
     display:flex;
     justify-content: center;
     flex-direction: column;
 
     text-align:center;
     padding:50px 30px;
-    
   
 }
 
-main div:nth-child(3) h1{
+.kortudvalg div:nth-child(2) h1{
     margin-bottom:20px;
-
 }
 
 /*ØL MENU STYLES*/
-main section:nth-child(4){
+.ølmenu{
     background-image: url(images/dåser.png);
     background-size: cover;
 
