--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,45 @@
     padding: 0;
 }
 
+/*HEADER*/
+header{
+    border-bottom: #CEA948 solid 4px;
+    position: fixed;
+    background-color: #0E1E24;
+    width: 100%;
+    z-index: 1;
+    height: 100px;
+}
+
+header img{
+    position: relative;
+    float: left;
+}
+nav a{
+    text-decoration: none;
+    color: #CEA948;
+    margin-right: 40px;
+    font-size: 16pt;
+    padding-bottom: 30px;
+    display: flex;
+    align-items: right;
+}
+
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    padding-top: 50px;
+
+}
+
+nav a:hover{
+    text-decoration: underline;
+}
+
 /*GENERELLE REGLER*/
 body{
-    background-color: #0F2127;
+    background-color: #0E1E24;
     color:#CEA948;
 }
 
@@ -16,6 +52,7 @@ section{
 
 p{
     line-height: 1.6;
+    font-size: 14pt;
 }
 
 /*BAGGRUNDSBILLEDE I TOPPEN*/
@@ -25,6 +62,17 @@ p{
     background-repeat: no-repeat;
     width: 100%;
     height: 600px;
+}
+
+/*BØLGE*/
+.wave{
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100px;
+    margin-top: -80px;
+
 }
 
 /*OVERSKRIFT*/
@@ -39,7 +87,7 @@ p{
 
 .overskrift h1{
     position:relative;
-    background-color: #0f2127;
+    background-color: #0E1E24;
     top: 30px;
 
     width:500px;
@@ -96,4 +144,20 @@ p{
     padding-top: 60px;
 }
 
+/*FOOTER*/
+footer{
+    display: flex;
+    margin: 10%;
+}
 
+footer h1{
+    font-size: 18pt;
+}
+
+footer p{
+    font-size: 12pt;
+}
+
+footer h2{
+    font-size: 15pt;
+}
