--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -6,7 +6,6 @@
 
 body{
     background-color: #0e1e24;
-    /*margin:10%;*/
 }
 
 /*SIDENS HOVEDOVERSKRIFT*/
@@ -53,10 +52,27 @@ main .topbillede{
     height:500px;
 }
 
+
+/*BØLGER*/
 .topbillede img{
     width:100%;
     position:relative;
     top:400px; /*skubbe bølgen ned af*/
+}
+
+.en-bølge-omvendt img{
+    position:relative;
+    bottom:30px;
+}
+
+.en-bølge img{
+    position:relative;
+    bottom:100px;
+}
+
+.to-bølger-omvendt{
+    position: relative;
+    
 }
 
 /*CARD STYLE: VORES UDVALG*/
@@ -102,7 +118,12 @@ main .topbillede{
 
 .kortudvalg div:nth-child(2) h1{
     margin-bottom:20px;
+    /*font-family: ???*/
 }
+
+/*.kortudvalg div:nth-child(2) p{ ARBEJD PÅ SENERE
+
+}*/
 
 /*ØL MENU STYLES*/
 .ølmenu{
@@ -115,10 +136,6 @@ main .topbillede{
     height:2000px;
 }
 
-.ølmenu > div:nth-child(4){ /*bølge i bunden*/
-    position:relative;
-    top:1750px;
-}
 
 /*FOOTER STYLES*/
 footer{
@@ -127,5 +144,6 @@ footer{
 }
 
 footer div:first-child img{
-    bottom:100px;
+    width:100%;
+    top:100px;
 }
