--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -1,123 +1,124 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #0e1e24;
 }
 
 /*SIDENS HOVEDOVERSKRIFT*/
-.sideoverskrift{
+.sideoverskrift {
     margin: 100px auto 80px;
     text-align: center;
     max-width: 820;
     position: relative;
-    
+
     color: #CEA948;
     font-size: 30pt;
 }
 
-.sideoverskrift:before{
-    content:'';
+.sideoverskrift:before {
+    content: '';
     display: block;
     width: 300px;
-   height: 1px;
+    height: 1px;
 
-   background: #CEA948;
-   position: absolute;
-   left: 10%;
-   top: 50%;
+    background: #CEA948;
+    position: absolute;
+    left: 10%;
+    top: 50%;
 }
 
-.sideoverskrift:after{
-    content:'';
+.sideoverskrift:after {
+    content: '';
     display: block;
     width: 300px;
-   height: 1px;
+    height: 1px;
 
-   background:#CEA948; 
-   position: absolute;
-   right: 10%;
-   top: 50%;
+    background: #CEA948;
+    position: absolute;
+    right: 10%;
+    top: 50%;
 }
 
 /*TOP BILLEDE*/
-main .topbillede{
+main .topbillede {
     background-image: url(images/ølspecialiteter.png);
     background-repeat: no-repeat;
     background-size: cover;
 
-    height:500px;
+    height: 500px;
 }
 
 
 /*BØLGER*/
-.topbillede img{
-    width:100%;
-    position:relative;
-    top:400px; /*skubbe bølgen ned af*/
-}
-
-.en-bølge-omvendt img{
-    position:relative;
-    bottom:30px;
-}
-
-.en-bølge img{
-    position:relative;
-    bottom:100px;
-}
-
-.to-bølger-omvendt{
+.topbillede img {
+    width: 100%;
     position: relative;
-    
+    top: 400px;
+    /*skubbe bølgen ned af*/
+}
+
+.en-bølge-omvendt img {
+    position: relative;
+    bottom: 30px;
+}
+
+.en-bølge img {
+    position: relative;
+    bottom: 90px;
+}
+
+.to-bølger-omvendt {
+    position: relative;
+    top: 100px;
 }
 
 /*CARD STYLE: VORES UDVALG*/
-.kortudvalg{
-    display:flex;
+.kortudvalg {
+    display: flex;
     flex-direction: row;
 
-    border:1px solid #cea948;
+    border: 1px solid #cea948;
     background-color: #204653;
-    color:#cea948;
+    color: #cea948;
 
     border-radius: 22px;
-    height:500px;
+    height: 500px;
 
-    margin-bottom:100px;
+    margin-bottom: 100px;
 
-    margin-right:10%;
-    margin-left:10%;
+    margin-right: 10%;
+    margin-left: 10%;
 }
 
-.kortudvalg div:first-child{
-    width:125%;
+.kortudvalg div:first-child {
+    width: 125%;
 }
 
-.kortudvalg div:first-child img{
-    width:100%;
-    height:100%;
+.kortudvalg div:first-child img {
+    width: 100%;
+    height: 100%;
 
     border-radius: 20px;
-    border:2px solid #cea948;
+    border: 2px solid #cea948;
 
 }
 
-.kortudvalg div:nth-child(2){
-    display:flex;
+.kortudvalg div:nth-child(2) {
+    display: flex;
     justify-content: center;
     flex-direction: column;
 
-    text-align:center;
-    padding:50px 30px;
-  
+    text-align: center;
+    padding: 50px 30px;
+
 }
 
-.kortudvalg div:nth-child(2) h1{
-    margin-bottom:20px;
+.kortudvalg div:nth-child(2) h1 {
+    margin-bottom: 20px;
     /*font-family: ???*/
 }
 
@@ -126,24 +127,87 @@ main .topbillede{
 }*/
 
 /*ØL MENU STYLES*/
-.ølmenu{
-    background-image: url(images/dåser2.png); /*billede skal måske skiftes*/
+.ølmenu {
+    background-image: url(images/dåser2.png);
+    /*billede skal måske skiftes*/
     background-size: cover;
     background-repeat: no-repeat;
+    /*opacity: 0.4;*/
 
-    opacity: 0.4;
+    height: 2000px;
 
-    height:2000px;
+}
+
+.ølliste{
+    display:flex;
+    justify-content: center;
+    text-align: left;
+}
+
+.faste-øl, .nyeste-øl {
+    color: #CEA948;
+    background-color: #204653;
+    border:1px solid #CEA948;
+
+    width:100%;
+    border-radius: 22px;
+
+    margin-right: 10%;
+    margin-left: 10%;
+
+
+
+}
+
+ol{
+    display:inline-block;
+    text-align: left;
+}
+
+/*ØL MENU OVERSKRIFTER*/
+
+.faste-øl h2, .nyeste-øl h2 {
+    margin: 100px 20px;
+    text-align: center;
+    max-width: 500px;
+    position: relative;
+
+    color: #CEA948;
+    font-size: 12pt;
+}
+
+.faste-øl h2:before, .nyeste-øl h2:before {
+    content: '';
+    display: block;
+    width: 300px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    left: 5%;
+    top: 50%;
+}
+
+.faste-øl h2:after, .nyeste-øl h2:after {
+    content: '';
+    display: block;
+    width: 300px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    right: 10%;
+    top: 50%;
 }
 
 
 /*FOOTER STYLES*/
-footer{
+footer {
     background-color: #2f667a;
-    height:500px;
+    height: 500px;
 }
 
-footer div:first-child img{
-    width:100%;
-    top:100px;
+footer div:first-child img {
+    width: 100%;
+    top: 100px;
 }
