--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -39,74 +39,30 @@
 }
 
 /*Kort*/
-/*Kort et*/
-.cardet{
+.sektioner{
     display: flex;
     justify-content: center;
     width: 100%;
     height: 400px;
-
+    align-items: center;
 }
 
-.image{
+.img{
     width: 50%;
-    background-color: #CEA948;
-    background: url(images/hygge.png);
-    background-size: cover;
-    display: flex;
+    max-height: 400px;
+    max-width: 50%;
+}
+.img:hover{
+    transform: scale(1.1);
 }
 
-.textet{
+
+.sektioner .text{
     width: 50%;
-    text-align: left;
-    background-color: #2F667A;
-    padding: 100px;
-    color: #CEA948;
-}
-
-/*Kort to*/
-.cardto{
-    display: flex;
-    justify-content: center;
-    width: 100%;
     height: 400px;
-}
-
-.imageto{
-    width: 50%;
-    background: url(images/brætspil.png);
-    background-size: cover;
-    display: flex;
-}
-
-.textto{
-    width: 50%;
-    text-align: left;
-    background-color: #2F667A;
     color: #CEA948;
-    padding: 100px;
-}
-
-/*Kort tre*/
-.cardtre{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 400px;
-}
-
-.imagetre{
-    width: 50%;
-    background: url(images/ølsmagninger.png);
-    background-size: cover;
-
-}
-
-.texttre{
-    width: 50%;
-    text-align: left;
     background-color: #2F667A;
-    color: #CEA948;
+    text-align: left;
     padding: 100px;
 }
 
@@ -120,32 +76,5 @@
     display: inline-block;
     margin: 4px 2px;
     cursor: pointer;
-    border-radius: 20px;
-  }
+    border-radius: 20px;}
 
-/*Kort fire*/
-.cardfire{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 400px;
-}
-
-.imagefire{
-    width: 50%;
-    background: url(images/fodbold.png);
-    background-size: cover;
-}
-
-.textfire{
-    width: 50%;
-    text-align: left;
-    background-color: #2F667A;
-    color: #CEA948;
-    padding: 100px;
-}
-
-/*Image hover*/
-.image .imageto .imagetre .imagefire:hover img{
-    transform: scale(1,5);
-}
