--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -8,6 +8,10 @@ body {
     background-color: #0e1e24;
 }
 
+main{
+    height:auto;
+}
+
 /*SIDENS HOVEDOVERSKRIFT*/
 .sideoverskrift {
     margin: 100px auto 80px;
@@ -50,36 +54,27 @@ main .topbillede {
     background-size: cover;
 
     height: 500px;
+
 }
 
 
 /*BØLGER*/
-.topbillede img {
-    width: 100%;
-    position: relative;
-    top: 400px;
-    /*skubbe bølgen ned af*/
-}
-
 .en-bølge-omvendt img {
     position: relative;
     bottom: 30px;
 }
 
-.en-bølge img {
+img.en-bølge {
     position: relative;
-    bottom: 90px;
+    top: 725px;
 }
 
-.to-bølger-omvendt {
-    position: relative;
-    top: 100px;
-}
 
 /*CARD STYLE: VORES UDVALG*/
 .kortudvalg {
     display: flex;
     flex-direction: row;
+
 
     border: 1px solid #cea948;
     background-color: #204653;
@@ -96,6 +91,7 @@ main .topbillede {
 
 .kortudvalg div:first-child {
     width: 125%;
+    flex-wrap: wrap;
 }
 
 .kortudvalg div:first-child img {
@@ -134,7 +130,7 @@ main .topbillede {
     background-repeat: no-repeat;
     /*opacity: 0.4;*/
 
-    height: 2000px;
+    height: 1300px;
 
 }
 
@@ -201,13 +197,4 @@ ol{
 }
 
 
-/*FOOTER STYLES*/
-footer {
-    background-color: #2f667a;
-    height: 500px;
-}
 
-footer div:first-child img {
-    width: 100%;
-    top: 100px;
-}
