--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -14,9 +14,16 @@ section{
     display: flex;
 }
 
+h1{
+    font-family: 'Playfair Display SC', serif;
+    letter-spacing: 1px;
+
+}
 p{
-    line-height: 1.6;
+    line-height: 1.3;
     font-size: 14pt;
+    font-family: 'Arsenal', sans-serif;
+    letter-spacing: 0.7px;
 }
 
 /*BAGGRUNDSBILLEDE I TOPPEN*/
@@ -35,31 +42,45 @@ p{
     background-size: cover;
     width: 100%;
     height: 100px;
-    margin-top: -80px;
-
+    bottom: 40px;
 }
 
 /*OVERSKRIFT*/
-.overskrift{
-    border-bottom: 1px solid #cea948;
-    width:100%;
+.overskrift {
+    display: flex;
+    justify-content: center;
 
-    padding-left:30%;
-    margin-bottom:80px;
+    text-align: center;
+    margin: 100px auto 80px;
+    max-width: 820;
+    position: relative;
 
+    color: #CEA948;
+    font-size: 30pt;
 }
 
-.overskrift h1{
-    position:relative;
-    background-color: #0E1E24;
-    top: 30px;
+.overskrift:before {
+    content: '';
+    display: block;
+    width: 300px;
+    height: 1px;
 
-    width:500px;
-    text-align: center;
-    
-    font-weight:500;
-    font-size: 40pt;
-    color:#cea948;
+    background: #CEA948;
+    position: absolute;
+    left: 10%;
+    top: 50%;
+}
+
+.overskrift:after {
+    content: '';
+    display: block;
+    width: 300px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    right: 10%;
+    top: 50%;
 }
 
 /*FØRSTE SECTION MED TEKST*/
@@ -86,11 +107,18 @@ p{
 }
 
 .divto{
-    background-color: #2F667A;
-    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
-    padding: 50px;
 
+    background-color: #204653;
+    width: 50%;
+    padding: 50px 30px;
+}
+
+.divto h1{
+    margin-bottom: 10px;
 }
 
 /*TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE*/
