--- a/mobilefirst/headerfooter.css
+++ b/mobilefirst/headerfooter.css
@@ -12,8 +12,6 @@ header{
     width: 100%;
     z-index: 2;
     height: 100px;
-
-
 }
 
 header img{
@@ -50,7 +48,7 @@ header .navmobil{
 .topbillede img {
     width: 100%;
     position: relative;
-    top: 250px;
+    top: 500px;
     /*skubbe bølgen ned af*/
 }
 
@@ -71,6 +69,10 @@ footer > section{
 footer h2{
     font-size:21pt;
     padding-bottom:10px;
+}
+
+footer li{
+    list-style: none;
 }
 
 /*FOOTER BØLGER*/
