--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -156,14 +156,16 @@ img.en-bølge {
 
 }
 
-
+.faste-øl > p, .nyeste-øl > p{
+    float:right;
+}
 
 ol{
     display:inline-block;
     text-align: left;
 }
 
-ol li{
+ol li, .faste-øl > p, .nyeste-øl > p{
     padding:3% 5%; 
 }
 
@@ -176,14 +178,14 @@ li > div:first-child{
 /*ØL MENU OVERSKRIFTER*/
 
 .faste-øl h2, .nyeste-øl h2 {
-    margin: 80px 20px;
+    margin: 50px 20px;
     text-align: center;
     max-width: 500px;
     position: relative;
 
     background-color: #204653;
     color: #CEA948;
-    font-size: 16pt;
+    font-size: 21pt;
 }
 
 .faste-øl h2:before, .nyeste-øl h2:before {
