--- a/mobilefirst/contact.css
+++ b/mobilefirst/contact.css
@@ -63,11 +63,14 @@ h2{
    font-size: 40pt;
 }
 .contactus{
+    align-items: center;
     justify-content: center;
     text-align: center;
     display: flex;
-    width: 500px;
+    width: 700px;
+    
 }
+
 #headerimg{
     background-image: url(images/dåseølheader.png);
     width: 100%;
@@ -77,14 +80,21 @@ h2{
     background-size: cover;
 }
 
+
 /*kontaktformular*/
+.contact{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 .contactformular{
     border-style:solid;
     border-color:#CEA948;
     border-radius:10px;
     position: relative;
     display: flex;
-    width:50%;
+    width:123%;
     height:100%;
     display: grid;
     grid-template-columns:repeat;
@@ -177,6 +187,7 @@ h2{
     color: #cea948;
     border-radius: 22px;
     height: 500px;
+    width:80%;
     margin-bottom: 100px;
     margin-right: 10%;
     margin-left: 10%;
@@ -186,11 +197,11 @@ h2{
 }
 
 .kortudvalgbar div:first-child {
-    width: 120%;
+    width: 100%;
 }
 
 .kortudvalgbar div:first-child img {
-    width: 100%;
+    width: 110%;
     height: 100%;
 
     border-radius: 20px;
@@ -202,10 +213,12 @@ h2{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
+    text-align:left;
     padding: 50px 30px;
 
 }
+
+
 
 .kortudvalgbar div:nth-child(2) h1 {
     margin-bottom: 20px;
@@ -217,39 +230,36 @@ h2{
 
 
 /*kortudvalg til shoppen*/
+
+
 .kortudvalgshop {
     display: flex;
     flex-direction: row;
-
     border: 1px solid #cea948;
     background-color: #204653;
     color: #cea948;
-
     border-radius: 22px;
     height: 500px;
-
     margin-bottom: 100px;
-
     margin-right: 10%;
     margin-left: 10%;
-    text-align:left;
+    text-align:left; 
 }
 
 .kortudvalgshop div:first-child {
-    width: 65%;
+    width: 60%;
     height: 100%;
 }
 
 .kortudvalgshop div:first-child img {
-    width: 1;
     height: 100%;
-
     border-radius: 20px;
     border: 2px solid #cea948;
 
 }
 
 .kortudvalgshop div:nth-child(2) {
+    width:130%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -260,8 +270,46 @@ h2{
 }
 
 .kortudvalgshop div:nth-child(2) h1 {
+    margin-top: 35px;
     margin-bottom: 20px;
-    /*font-family: ???*/
+    padding:20px ;
+
 }
 
+
+/*Åbningstider*/
+
+.openinghours{
+    display: flex;
+    justify-content: center;
+    width:100%;
+    height:800px;
+}
+
+.firsttext{
+    width: 50%;
+    height: 450px;
+    color: #CEA948;
+    background-color:#204653;
+    text-align: center;
+}
+
+.secondtext{
+    width: 50%;
+    height: 450px;
+    color: #CEA948;
+    background-color: #2F667A;
+    text-align: center;
+}
+
+.openinghours h2{
+margin-top: 30px;
+text-align: center;
+font-size:28pt;
+}
+
+.openinghours p{
+    padding: 10px;
+    font-size: 14pt;
+}
 
