--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -121,6 +121,16 @@ p{
     margin-bottom: 10px;
 }
 
+/*BØLGE TO*/
+.wavetwo{
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 50px;
+    bottom: 40px;
+}
+
 /*TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE*/
 .sectiontre{
     background: url(images/baggrundomos.png);
@@ -135,3 +145,5 @@ p{
     margin-top: 50px;
     padding-top: 60px;
 }
+
+/*RESPONSIV*/
