--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -7,11 +7,18 @@
         background-color: #0E1e24
     }
 
-    p{
-        line-height: 1.6;
-        font-size: 14pt;
-    }
 
+    h1{
+        font-family: 'Playfair Display SC', serif;
+        letter-spacing: 1px;
+    
+    }
+    p{
+        line-height: 1.3;
+        font-size: 14pt;
+        font-family: 'Arsenal', sans-serif;
+        letter-spacing: 0.7px;
+    }
 
 
 /*Baggrundsbillede*/
@@ -46,38 +53,41 @@ height: 600px;
 }
 
 /*Header skrift*/
-.overskrift{
-    margin: 0 auto 15px;
+.overskrift {
+    display: flex;
+    justify-content: center;
+
     text-align: center;
+    margin: 100px auto 80px;
     max-width: 820;
     position: relative;
+
     color: #CEA948;
-    margin: 50px;
+    font-size: 30pt;
 }
 
-.overskrift:before{
-    content:'';
+.overskrift:before {
+    content: '';
     display: block;
-    width: 200px;
-   height: 1px;
-   background: #CEA948;
-   position: absolute;
-   left: 30%;
-   top: 50%;
+    width: 300px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    left: 10%;
+    top: 50%;
 }
 
-.overskrift:after{
-    content:'';
+.overskrift:after {
+    content: '';
     display: block;
-    width: 200px;
-   height: 1px;
+    width: 300px;
+    height: 1px;
 
-   background:#CEA948; 
-   position: absolute;
-   right: 30%;
-   top: 50%;
-
-   
+    background: #CEA948;
+    position: absolute;
+    right: 10%;
+    top: 50%;
 }
 
 /*Kort*/
@@ -115,6 +125,8 @@ height: 600px;
     padding: 100px;
 }
 
+
+/*Button*/
 .button{
     color: #CEA948;
     background-color: #0F2127;
