--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -110,7 +110,7 @@ p{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
+    text-align:left;
 
     background-color: #204653;
     width: 50%;
@@ -140,10 +140,11 @@ p{
     height: 600px;
 }
 .divtre p{
-    text-align: center;
+    text-align: left;
     padding-right: 800px;
     margin-top: 50px;
     padding-top: 60px;
+    padding-left: 50px;
 }
 
 /*RESPONSIV*/
