--- a/mobilefirst/contact.css
+++ b/mobilefirst/contact.css
@@ -15,9 +15,9 @@ h1{
 header{
     border-bottom: #CEA948 solid 4px;
     position: fixed;
-    background-color:#0E1E24;
+    background-color: #0E1E24;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     height: 100px;
 }
 
@@ -47,6 +47,9 @@ nav a:hover{
     text-decoration: underline;
 }
 
+header .navmobil{
+    display:none;
+}
 /*GENERELLE REGLER*/
 body{
     background-color: #0E1E24;
@@ -57,10 +60,12 @@ body{
 p{
     padding: 30px;
     color:#CEA948;
+    font-family:Arsenal’, sans-serif;
 }
 h2{
    color:#CEA948;
    font-size: 40pt;
+   font-family:‘Playfair Display SC’, serif;
 }
 .contactus{
     align-items: center;
@@ -72,6 +77,7 @@ h2{
 }
 
 #headerimg{
+    padding-top:0;
     background-image: url(images/dåseølheader.png);
     width: 100%;
     height: 420px;
@@ -221,17 +227,15 @@ h2{
 
 
 .kortudvalgbar div:nth-child(2) h1 {
-    margin-bottom: 20px;
+    padding-top: 0px;
+    margin-bottom: 25px;
     /*font-family: ???*/
 }
 
-/*.kortudvalg div:nth-child(2) p{ ARBEJD PÅ SENERE
-}*/
+
 
 
 /*kortudvalg til shoppen*/
-
-
 .kortudvalgshop {
     display: flex;
     flex-direction: row;
@@ -284,6 +288,7 @@ h2{
     justify-content: center;
     width:100%;
     height:800px;
+    margin-bottom:20px;
 }
 
 .firsttext{
@@ -313,3 +318,63 @@ font-size:28pt;
     font-size: 14pt;
 }
 
+
+/*FOOTER STYLES*/
+footer > section{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    background-color: #2f667a;
+    height: auto;
+    padding:10%;
+    
+    color:#CEA948;
+
+}
+
+footer h2{
+    font-size:21pt;
+    padding-bottom:10px;
+}
+
+footer li{
+    list-style: none;
+}
+
+/*FOOTER BØLGER*/
+img.to-bølger-omvendt {
+
+    position: relative;
+    top: 100px;
+}
+
+/*FOOTER IKONER*/
+.socials{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    padding-top:2%;
+}
+
+.socials h1{
+    font-size: 30pt;
+}
+
+.fa-brands{
+    margin-right:20px;
+    color:#CEA948;
+}
+
+.fa-brands:hover{
+    color: #EDC458;
+}
+
+
+/*FOOTER ADRESSE OG TLF*/
+.adresse-tlf{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
