--- a/mobilefirst/headerfooter.css
+++ b/mobilefirst/headerfooter.css
@@ -26,10 +26,13 @@ header{
     height: 100px;
 }
 
+
 header img{
     position: relative;
     float: left;
+    margin-left:50px;
 }
+
 nav a{
     text-decoration: none;
     color: #CEA948;
@@ -38,6 +41,7 @@ nav a{
     padding-bottom: 30px;
     display: flex;
     align-items: right;
+    
 }
 
 nav{
