--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -54,7 +54,7 @@ main .topbillede {
     background-size: cover;
 
     width:100%;
-    height: 700px;
+    height: 600px;
 
 }
 
@@ -68,6 +68,13 @@ main .topbillede {
 img.en-bølge {
     position: relative;
     top:40px;
+}
+
+.topbillede img {
+    width: 100%;
+    position: relative;
+    top: 500px;
+    /*skubbe bølgen ned af*/
 }
 
 
