--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -97,18 +97,21 @@ height: 600px;
     width: 100%;
     height: 400px;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .sektioner .container{
     height:auto;
     width:50%;
     overflow:hidden;
+    flex: 50%;
 }
 
 .container > img{
     width:100%;
     display: block;
     max-height: 400px;
+    flex: 50%;
 }
 .container:hover img{
     transform: scale(1.1);
@@ -123,7 +126,15 @@ height: 600px;
     background-color: #2F667A;
     text-align: left;
     padding: 100px;
+    flex: 50%;
 }
+
+/*MOBIL*/
+@media (max-width: 800px) {
+    .container, .sektioner .text {
+      flex: 100%;
+    }
+  }
 
 
 /*Button*/
