forside kortbilleder fikset

--- a/mobilefirst/contact.css
+++ b/mobilefirst/contact.css
@@ -171,6 +171,8 @@ h2 {
 
     color: #cea948;
     background-color: #2f667a;
+
+    font-family: 'Playfair Display SC', serif;
     font-size: 12pt;
 
     border: none;
