--- a/mobilefirst/forside.css
+++ b/mobilefirst/forside.css
@@ -1,15 +1,15 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 /*GENERELLE REGLER*/
-body{
+body {
     background-color: #0E1E24;
 }
 
-p{
+p {
     line-height: 1.3;
     font-size: 14pt;
     font-family: 'Arsenal', sans-serif;
@@ -22,7 +22,7 @@ main .topbillede {
     background-repeat: no-repeat;
     background-size: cover;
 
-    width:100%;
+    width: 100%;
     height: 700px;
 
 }
@@ -35,38 +35,45 @@ main .topbillede {
     /*skubbe bølgen ned af*/
 }
 
-.topbillede h1{
-    font-size:40pt;
-    color:#cea948;
+.topbillede h1 {
+    font-size: 40pt;
+    color: #cea948;
 
-    position:relative;
-    top:300px;
-    padding-left:15%;
+    position: relative;
+    top: 300px;
+    padding-left: 15%;
 
-    display:flex;
+    display: flex;
     align-items: center;
     text-align: center;
-    
+
 }
 
 /*Button*/
-.button{
+.button {
     color: #CEA948;
-    background-color: #0F2127;
+    background-color: #0F2124;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    margin: 4px 2px;
+    margin-top: 30px;
     cursor: pointer;
-    border-radius: 20px;}
+    border-radius: 20px;
 
-.button:hover{
-    background-color: #204653;
-    color: #CEA948;
-    border-color: #CEA948;
+    font-size: 10pt;
+    width:30%;
+
+    border:1px solid #0E1E24;
     transition: 0.5s;
-    border-style: solid;
+
+  
+}
+
+.button:hover {
+    background-color: #204653;
+    border:1px solid #CEA948;
+
 }
 
 /*CARDS*/
@@ -81,62 +88,80 @@ main .topbillede {
     margin-bottom: 100px;
     margin-right: 10%;
     margin-left: 10%;
-    margin-top:7%;
+    margin-top: 7%;
 }
 
 /*CARDS BILLED STYLES*/
-.cardsforside div:first-child img, div:nth-child(2) img {
+.cardsforside div:first-child img {
     width: 100%;
     height: 100%;
     border-radius: 20px;
     border: 2px solid #cea948;
 }
 
+
+.cardsforside div:nth-child(2) img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    border: 2px solid #cea948;
+}
+
+.cardsforside div:first-child, .cardsforside div:nth-child(2){
+    width:50%;
+}
+
 /*CARDS TEXT STYLES*/
 .cardsforside .textforside {
-    display: flex;
+    /*display: flex;
     justify-content: center;
     flex-direction: column;
     text-align: left;
     padding: 50px 30px;
 
-    width: 50%;
+    width: 50%;*/
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    padding: 50px 40px;
+
 }
 
 /*INSTAGRAM STYLES*/
-.instacontainer{
-    display: flex;
-    justify-content:space-around;
-  /*  flex-wrap; wrap;*/
-  padding: 1px;
-  margin: -10px;
-    font-family: 'Open Sans', sans-serif;
-    border-radius:22px;
-}
-
-.instacontainer div{
-width: 350px;
-height: 350px;
-text-align:center;
-margin:3px;
-border-radius:22px;
-}
-
-.secondinstacontainer{
-    border-radius:22px;
+.instacontainer {
     display: flex;
     justify-content: space-around;
-  /*  flex-wrap; wrap;*/
+    /*  flex-wrap; wrap;*/
+    padding: 1px;
+    margin: -10px;
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 22px;
+}
+
+.instacontainer div {
+    width: 350px;
+    height: 350px;
+    text-align: center;
+    margin: 3px;
+    border-radius: 22px;
+}
+
+.secondinstacontainer {
+    border-radius: 22px;
+    display: flex;
+    justify-content: space-around;
+    /*  flex-wrap; wrap;*/
     padding-bottom: 3px;
-    border-radius:10px;
-    font-family: 'Open Sans', sans-serif;  
+    border-radius: 10px;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.secondinstacontainer div{
-width: 350px;
-height: 350px;
-text-align:center;
-margin:3px;
-border-radius:22px;
+.secondinstacontainer div {
+    width: 350px;
+    height: 350px;
+    text-align: center;
+    margin: 3px;
+    border-radius: 22px;
 }
-
