--- a/mobilefirst/contact.css
+++ b/mobilefirst/contact.css
@@ -26,6 +26,26 @@ h2 {
     /*fontfamily*/
 }
 
+/*NAV A STREG UNDER VED AKTIV SIDE*/
+nav a:nth-child(4){
+    position:relative;
+    color:#CEA948;
+}
+
+nav a:nth-child(4):before{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #CEA948;
+    transform-origin: left;
+    transform: scaleX(1);
+    text-decoration: underline;
+}
+
 
 .topbillede {
     background-image: url(images/dåseølheader.png);
@@ -113,15 +133,9 @@ h2 {
     flex-direction: column;
     width: 100%;
 
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
     margin-bottom: 200px;
 
-    padding:50px;
+    padding:40px;
     padding-left: 100px;
     padding-right:100px;
 
@@ -180,9 +194,9 @@ h2 {
 
     width: 15%;
     border: 1px solid #cea948;
-    border-radius: 20px;
+    border-radius: 8px;
 
-    margin-top: 18px;
+    margin-top: 20px;
     margin-bottom: 20px;
     padding: 10px;
 
