--- a/mobilefirst/forside.css
+++ b/mobilefirst/forside.css
@@ -16,6 +16,10 @@ p {
     letter-spacing: 0.7px;
 }
 
+main{
+    height:auto;
+}
+
 /*TOP BILLEDE*/
 main .topbillede {
     background-image: url(images/velkommen.png);
@@ -23,8 +27,7 @@ main .topbillede {
     background-size: cover;
 
     width: 100%;
-    height: 700px;
-
+    height: 750px;
 }
 
 /*BØLGER*/
@@ -57,7 +60,7 @@ main .topbillede {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 20px;
     cursor: pointer;
     border-radius: 20px;
 
@@ -67,29 +70,30 @@ main .topbillede {
     border:1px solid #0E1E24;
     transition: 0.5s;
 
-  
 }
 
 .button:hover {
     background-color: #204653;
     border:1px solid #CEA948;
-
 }
 
 /*CARDS*/
 .cardsforside {
     display: flex;
-    flex-direction: row;
+
     border: 1px solid #cea948;
+    border-radius: 22px;
+
     background-color: #204653;
     color: #cea948;
-    border-radius: 22px;
-    height: 500px;
-    margin-bottom: 100px;
+  
+    height: 400px;
+    margin-top:50px;
+    margin-bottom:50px;
     margin-right: 10%;
     margin-left: 10%;
-    margin-top: 7%;
 }
+
 
 /*CARDS BILLED STYLES*/
 .cardsforside div:first-child img {
@@ -113,20 +117,15 @@ main .topbillede {
 
 /*CARDS TEXT STYLES*/
 .cardsforside .textforside {
-    /*display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: left;
-    padding: 50px 30px;
-
-    width: 50%;*/
-
     display: flex;
     justify-content: center;
     flex-direction: column;
 
     padding: 50px 40px;
+}
 
+.textforside h2{
+    margin-bottom:20px;
 }
 
 /*INSTAGRAM STYLES*/
