--- a/mobilefirst/headerfooter.css
+++ b/mobilefirst/headerfooter.css
@@ -4,19 +4,23 @@
     box-sizing: border-box;
 }
 
-body p{
+body p {
     font-family: 'Arsenal', sans-serif;
-    letter-spacing:0.5px;
+    letter-spacing: 0.8px;
+    line-height: 25px;
     font-size: 12pt;
 }
 
-body, h1, h2, h3{
+body,
+h1,
+h2,
+h3 {
     font-family: 'Playfair Display SC', serif;
-    letter-spacing:0.5px;
+    letter-spacing: 0.5px;
 }
 
 /*HEADER*/
-header{
+header {
     border-bottom: #CEA948 solid 4px;
     position: fixed;
     background-color: #0E1E24;
@@ -27,59 +31,77 @@ header{
 }
 
 
-header img{
+header img {
     position: relative;
     float: left;
-    margin-left:50px;
+    margin-left: 50px;
 }
 
-nav a{
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    padding-top: 30px;
+}
+
+nav a {
+    position: relative;
     text-decoration: none;
     color: #CEA948;
     margin-right: 40px;
     font-size: 16pt;
-    padding-bottom: 30px;
-    display: flex;
-    align-items: right;
+    padding-bottom: 10px;
     
+    align-items: right;
 }
 
-nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    padding-top: 50px;
+nav a:hover {
+    color: #CEA948;
 }
 
-nav a:hover{
-    text-decoration: underline;
+nav a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #CEA948;
+    transform-origin: left;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
 }
 
-header .navmobil{
-    display:none;
+nav a:hover::before {
+    transform: scaleX(1);
+}
+
+
+header .navmobil {
+    display: none;
 }
 
 
 /*FOOTER STYLES*/
-footer > section{
-    display:flex;
+footer>section {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
 
     background-color: #2f667a;
-    height: auto;
-    padding:10%;
-    
-    color:#CEA948;
+    padding: 10%;
+
+    color: #CEA948;
 
 }
 
-footer h2{
-    font-size:21pt;
-    padding-bottom:10px;
+footer h2 {
+    font-size: 21pt;
+    padding-bottom: 10px;
 }
 
-footer li{
+footer li {
     list-style: none;
 }
 
@@ -91,39 +113,38 @@ img.to-bølger-omvendt {
 }
 
 /*FOOTER IKONER*/
-.socials{
+.socials {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
 
-    padding-top:2%;
+    padding-top: 2%;
 }
 
-.socials h1{
+.socials h1 {
     font-size: 34pt;
 }
 
-.fa-brands{
-    margin-right:20px;
-    color:#CEA948;
+.fa-brands {
+    margin-right: 20px;
+    color: #CEA948;
 }
 
-.fa-brands:hover{
+.fa-brands:hover {
     color: #EDC458;
 }
 
 
 /*FOOTER ADRESSE OG TLF*/
-.adresse-tlf{
-    display:flex;
+.adresse-tlf {
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 
 }
 
 /*FOOTER ÅBNINGSTIDER*/
-footer ul li{
+footer ul li {
     font-family: 'Arsenal', sans-serif;
 }
-
