--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -18,8 +18,27 @@
         font-size: 14pt;
         font-family: 'Arsenal', sans-serif;
         letter-spacing: 0.7px;
-    }
+}
 
+/*NAV A STREG UNDER VED AKTIV SIDE*/
+nav a:nth-child(3){
+    position:relative;
+    color:#CEA948;
+}
+
+nav a:nth-child(3):before{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #CEA948;
+    transform-origin: left;
+    transform: scaleX(1);
+    text-decoration: underline;
+}
 
 /*Baggrundsbillede*/
 .baggrundbegivenheder{
