en mase ændringer sjdklfdj
har forsøgt at gøre header og footer responsiv + ølsiden

--- a/mobilefirst/headerfooter.css
+++ b/mobilefirst/headerfooter.css
@@ -7,7 +7,7 @@
 body p {
     font-family: 'Arsenal', sans-serif;
     letter-spacing: 0.8px;
-    line-height: 25px;
+    line-height: 22px;
     font-size: 12pt;
 }
 
@@ -30,74 +30,9 @@ header {
     height: 100px;
 }
 
-
-header img {
-    position: relative;
-    float: left;
-    margin-left: 50px;
-}
-
-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    padding-top: 30px;
-}
-
-nav a {
-    position: relative;
-    text-decoration: none;
-    color: #CEA948;
-    margin-right: 40px;
-    font-size: 16pt;
-    padding-bottom: 10px;
-    
-    align-items: right;
-}
-
-nav a:hover {
-    color: #CEA948;
-}
-
-nav a::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #CEA948;
-    transform-origin: left;
-    transform: scaleX(0);
-    transition: transform 0.3s ease;
-}
-
-nav a:hover::before {
-    transform: scaleX(1);
-}
-
-
-header .navmobil {
-    display: none;
-}
-
-
 /*FOOTER STYLES*/
-footer>section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    background-color: #2f667a;
-    padding: 10%;
-
-    color: #CEA948;
-
-}
-
 footer h2 {
-    font-size: 21pt;
+    font-size: 20pt;
     padding-bottom: 10px;
 }
 
@@ -105,46 +40,248 @@ footer li {
     list-style: none;
 }
 
-/*FOOTER BØLGER*/
-img.to-bølger-omvendt {
 
-    position: relative;
-    top: 100px;
+/*MOBIL*/
+@media screen and (max-width:910px) {
+
+    /*HEADER*/
+    .navlaptop {
+        display: none;
+    }
+
+    .navmobil {
+        display: block;
+
+    }
+
+    .navmobil a {
+        color: #CEA948;
+
+    }
+
+    .fa-solid {
+        float: right;
+        color: #CEA948;
+
+        margin-right:20px;
+        margin-top: 5%;
+    }
+
+    header img {
+        position: relative;
+        float: left;
+
+        width: 20%;
+
+        margin-left: 20px;
+
+    }
+
+    /*FOOTER*/
+    footer>section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        background-color: #2F667A;
+        padding: 8%;
+
+        color: #CEA948;
+    }
+
+    .socials {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10%;
+        margin-top:5%;
+    }
+
+    .socials h1 {
+        font-size: 20pt;
+    }
+
+    .fa-brands {
+        padding: 10px;
+        color: #CEA948;
+    }
+
+    /*FOOTER BØLGER*/
+    img.to-bølger-omvendt {
+
+        position: relative;
+        top: 30px;
+    }
+
+    /*FOOTER ADRESSE OG TLF OG ÅBNINGSTIDER*/
+    .adresse-tlf {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-right: 50px;
+    }
+
+    footer .tlf a {
+        text-decoration: none;
+        color: #CEA948;
+    }
+
+    .adresse-åbning {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+    }
+
+    .adresse-åbning h2 {
+        font-size: 12pt;
+    }
+
+    .adresse-åbning p {
+        line-height: 1.2;
+        font-size: small;
+    }
+
+    /*ÅBNINGSTIDER LISTE*/
+    footer ul li {
+        font-family: 'Arsenal', sans-serif;
+        font-size: x-small;
+        line-height: 1.5;
+    }
+
+
 }
 
-/*FOOTER IKONER*/
-.socials {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-evenly;
-
-    padding-top: 2%;
-}
-
-.socials h1 {
-    font-size: 34pt;
-}
-
-.fa-brands {
-    margin-right: 20px;
-    color: #CEA948;
-}
-
-.fa-brands:hover {
-    color: #EDC458;
-}
 
 
-/*FOOTER ADRESSE OG TLF*/
-.adresse-tlf {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+/*LAPTOP*/
+@media screen and (min-width: 910px) {
 
-}
+    /*HEADER*/
 
-/*FOOTER ÅBNINGSTIDER*/
-footer ul li {
-    font-family: 'Arsenal', sans-serif;
+    header img {
+        position: relative;
+        float: left;
+        margin-left: 50px;
+    }
+
+    .navlaptop {
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+        padding-top: 30px;
+    }
+
+    .navlaptop a {
+        position: relative;
+        text-decoration: none;
+        color: #CEA948;
+        margin-right: 50px;
+        font-size: 16pt;
+        padding-bottom: 10px;
+
+        align-items: right;
+    }
+
+    .navlaptop a:hover {
+        color: #CEA948;
+    }
+
+    .navlaptop a::before {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #CEA948;
+        transform-origin: left;
+        transform: scaleX(0);
+        transition: transform 0.3s ease;
+    }
+
+    .navlaptop a:hover::before {
+        transform: scaleX(1);
+    }
+
+
+    header .navmobil {
+        display: none;
+    }
+
+    /*FOOTER STYLES*/
+    footer>section {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        background-color: #2F667A;
+        padding: 10%;
+
+        color: #CEA948;
+    }
+
+
+    /*FOOTER BØLGER*/
+    img.to-bølger-omvendt {
+
+        position: relative;
+        top: 100px;
+    }
+
+    /*FOOTER IKONER*/
+    .socials {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+        padding-top: 2%;
+    }
+
+    .socials h1 {
+        font-size: 30pt;
+    }
+
+    .fa-brands {
+        margin-right: 20px;
+        color: #CEA948;
+    }
+
+    .fa-brands:hover {
+        color: #EDC458;
+    }
+
+
+    /*FOOTER ADRESSE OG TLF*/
+    .adresse-tlf {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-right: 100px;
+    }
+
+    footer .tlf a {
+        color: #CEA948;
+        text-decoration: none;
+    }
+
+    footer .tlf a:hover {
+        color: #EDC458;
+        text-decoration: underline;
+    }
+
+    .adresse-åbning {
+        display: flex;
+        flex-direction: row;
+    }
+
+
+    /*FOOTER ÅBNINGSTIDER*/
+    footer ul li {
+        font-family: 'Arsenal', sans-serif;
+        line-height: 25px;
+    }
 }
