--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -1,32 +1,34 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    body{
-        background-color: #0E1e24
-    }
+body {
+    background-color: #0E1e24
+}
 
 
-    h1{
-        font-family: 'Playfair Display SC', serif;
-        letter-spacing: 1px;
-    
-    }
-    p{
-        line-height: 1.3;
-        font-size: 14pt;
-        font-family: 'Arsenal', sans-serif;
-        letter-spacing: 0.7px;
+h1 {
+    font-family: 'Playfair Display SC', serif;
+    letter-spacing: 1px;
+
+}
+
+p {
+    line-height: 1.3;
+    font-size: 14pt;
+    font-family: 'Arsenal', sans-serif;
+    letter-spacing: 0.7px;
 }
 
 /*NAV A STREG UNDER VED AKTIV SIDE*/
-nav a:nth-child(3){
-    position:relative;
-    color:#CEA948;
+nav a:nth-child(3) {
+    position: relative;
+    color: #CEA948;
 }
 
-nav a:nth-child(3):before{
+nav a:nth-child(3):before {
     content: "";
     position: absolute;
     display: block;
@@ -41,17 +43,17 @@ nav a:nth-child(3):before{
 }
 
 /*Baggrundsbillede*/
-.baggrundbegivenheder{
-background: url(images/baggrundbegivenheder.png);
-background-size: cover;
-background-repeat: no-repeat;
-width: 100%;
-height: 600px;
+.baggrundbegivenheder {
+    background: url(images/baggrundbegivenheder.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
 }
 
 
 /*BØLGE*/
-.wave{
+.wave {
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -62,13 +64,21 @@ height: 600px;
 }
 
 /*BØLGE TO*/
-.waveto{
-    position: absolute; z-index: 1;
-    background-repeat: no-repeat;
-    background-size: cover;
+.waveto {
+    position: absolute;
+    z-index: 1;
     width: 100%;
     height: 100px;
     margin-top: -80px;
+}
+
+/*BØLGE TRE*/
+.wavetre{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100px;
+    top:2500px;
 }
 
 /*Header skrift*/
@@ -110,7 +120,7 @@ height: 600px;
 }
 
 /*Kort*/
-.sektioner{
+.sektioner {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -119,60 +129,75 @@ height: 600px;
     flex-wrap: wrap;
 }
 
-.sektioner .container{
-    height:auto;
-    width:50%;
-    overflow:hidden;
+.nederste-sektioner{
+    margin-top:100px;
+}
+
+.sektioner .container {
+    height: auto;
+    width: 50%;
+    overflow: hidden;
     flex: 50%;
 }
 
-.container > img{
-    width:100%;
+.container img {
+    width: 100%;
     display: block;
     max-height: 400px;
     flex: 50%;
+
+    transition: transform 2s;
 }
-.container:hover img{
+
+.container:hover img {
     transform: scale(1.1);
-    transition: 2s;
 }
 
 
-.sektioner .text{
+.sektioner .text {
     width: 50%;
     height: 400px;
     color: #CEA948;
-    background-color: #2F667A;
+    background-color: #204653;
     text-align: left;
     padding: 100px;
     flex: 50%;
 }
 
+.text h2{
+    margin-bottom:20px;
+}
+
 /*MOBIL*/
 @media (max-width: 800px) {
-    .container, .sektioner .text {
-      flex: 100%;
+
+    .container,
+    .sektioner .text {
+        flex: 100%;
     }
-  }
+}
 
 
 /*Button*/
-.button{
+.button {
     color: #CEA948;
     background-color: #0F2127;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    margin: 4px 2px;
+    margin-top: 20px;
     cursor: pointer;
-    border-radius: 20px;}
+    border-radius: 20px;
 
-.button:hover{
-    background-color: #2F667A;
-    color: #CEA948;
-    border-color: #CEA948;
+    border: 1px solid #204653;
     transition: 0.5s;
-    border-style: solid;
+
 }
 
+.button:hover {
+    background-color: #204653;
+    color: #CEA948;
+    border-color: #CEA948;
+    border-style: solid;
+}
