--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -8,244 +8,375 @@ body {
     background-color: #0e1e24;
 }
 
-main{
-    height:auto;
-}
-
-/*NAV A STREG UNDER VED AKTIV SIDE*/
-nav a:nth-child(2){
-    position:relative;
-    color:#CEA948;
-}
-
-nav a:nth-child(2):before{
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #CEA948;
-    transform-origin: left;
-    transform: scaleX(1);
-    text-decoration: underline;
+main {
+    height: auto;
 }
 
 
-/*SIDENS HOVEDOVERSKRIFT*/
-.sideoverskrift {
-    margin: 100px auto 80px;
-    text-align: center;
-    max-width: 820;
-    position: relative;
+/*MOBIL*/
+@media screen and (max-width:910px) {
 
-    color: #CEA948;
-    font-size: 30pt;
-}
+    /*TOP BILLEDE*/
+    main .topbillede {
+        background-image: url(images/ølspecialiteter.png);
+        background-repeat: no-repeat;
+        background-size: cover;
 
-.sideoverskrift:before {
-    content: '';
-    display: block;
-    width: 300px;
-    height: 1px;
+        position: relative;
+        top: 100px;
 
-    background: #CEA948;
-    position: absolute;
-    left: 10%;
-    top: 50%;
-}
+        width: 100%;
+        height: 200px;
+    }
 
-.sideoverskrift:after {
-    content: '';
-    display: block;
-    width: 300px;
-    height: 1px;
+    /*BØLGER*/
+    .en-bølge-omvendt img {
+        position: relative;
+        bottom: 30px;
+    }
 
-    background: #CEA948;
-    position: absolute;
-    right: 10%;
-    top: 50%;
-}
+    img.en-bølge {
+        position: relative;
+        top: 60px;
+    }
 
-/*TOP BILLEDE*/
-main .topbillede {
-    background-image: url(images/ølspecialiteter.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    .topbillede img {
+        width: 100%;
+        position: relative;
+        top: 160px;
+        /*skubbe bølgen ned af*/
+    }
 
-    width:100%;
-    height: 600px;
+    /*SIDENS HOVEDOVERSKRIFT*/
+    .sideoverskrift {
+        margin: 130px auto 50px;
+        text-align: center;
+        max-width: 820;
+        position: relative;
 
-}
+        color: #CEA948;
+        font-size: 12pt;
+    }
+
+    .sideoverskrift:before {
+        content: '';
+        display: block;
+        width: 30px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        left: 10%;
+        top: 50%;
+    }
+
+    .sideoverskrift:after {
+        content: '';
+        display: block;
+        width: 30px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        right: 10%;
+        top: 50%;
+    }
+
+    /*CARD STYLE: VORES UDVALG*/
+    .kortudvalg {
+        display: flex;
+        flex-direction: column;
+        color: #cea948;
+
+        border-radius: 22px;
+        margin-bottom: 100px;
+        margin-right: 5%;
+        margin-left: 5%;
+    }
+
+    .kortudvalg div:first-child {
+        width: 100%;
+        height: 100px;
+        margin-bottom:100px;
+    }
+
+    .kortudvalg div:first-child img {
+        width: 100%;
+        height:230px;
+        border-radius: 20px;
+        border: 2px solid #cea948;
+    }
 
 
-/*BØLGER*/
-.en-bølge-omvendt img {
-    position: relative;
-    bottom: 30px;
-}
+    .kortudvalg div:nth-child(2) {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
 
-img.en-bølge {
-    position: relative;
-    top:40px;
-}
+        padding: 50px 40px;
 
-.topbillede img {
-    width: 100%;
-    position: relative;
-    top: 500px;
-    /*skubbe bølgen ned af*/
-}
+    }
 
-
-/*CARD STYLE: VORES UDVALG*/
-.kortudvalg {
-    display: flex;
-    flex-direction: row;
-
-    border: 1px solid #cea948;
-    background-color: #204653;
-    color: #cea948;
-
-    border-radius: 22px;
-    height: 500px;
-
-    margin-bottom: 100px;
-
-    margin-right: 10%;
-    margin-left: 10%;
-}
-
-.kortudvalg div:first-child {
-    width: 125%;
-    flex-wrap: wrap;
-}
-
-.kortudvalg div:first-child img {
-    width: 100%;
-    height: 100%;
-
-    border-radius: 20px;
-    border: 2px solid #cea948;
-
-}
-
-.kortudvalg div:nth-child(2) {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-
-    padding: 50px 40px;
-
-}
-
-.kortudvalg div:nth-child(2) h1 {
-    margin-bottom: 20px;
-}
-
-/*ØL MENU STYLES*/
-.ølmenu {
-    background-image: url(images/dåser2.png);
-    /*billede skal måske skiftes*/
-    background-size: cover;
-    background-repeat: no-repeat;
-    /*opacity: 0.4;*/
-
-    height: 1300px;
-    width:100%;
+    .kortudvalg div:nth-child(2) h1 {
+        text-align: center;
+        margin-bottom: 10px;
+    }
 
 }
 
-.ølliste{
-    display:flex;
-    justify-content: center;
-    justify-content: space-evenly;
-    text-align: left;
+/*LAPTOP*/
+@media screen and (min-width: 910px) {
+
+    /*NAV A STREG UNDER VED AKTIV SIDE*/
+    nav a:nth-child(2) {
+        position: relative;
+        color: #CEA948;
+    }
+
+    nav a:nth-child(2):before {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #CEA948;
+        transform-origin: left;
+        transform: scaleX(1);
+        text-decoration: underline;
+    }
+
+
+    /*SIDENS HOVEDOVERSKRIFT*/
+    .sideoverskrift {
+        margin: 200px auto 80px;
+        text-align: center;
+        max-width: 820;
+        position: relative;
+
+        color: #CEA948;
+        font-size: 30pt;
+    }
+
+    .sideoverskrift:before {
+        content: '';
+        display: block;
+        width: 250px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        left: 10%;
+        top: 50%;
+    }
+
+    .sideoverskrift:after {
+        content: '';
+        display: block;
+        width: 250px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        right: 10%;
+        top: 50%;
+    }
+
+    /*TOP BILLEDE*/
+    main .topbillede {
+        background-image: url(images/ølspecialiteter.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        position: relative;
+        top: 100px;
+
+        width: 100%;
+        height: 600px;
+    }
+
+
+    /*BØLGER*/
+    .en-bølge-omvendt img {
+        position: relative;
+        bottom: 30px;
+    }
+
+    img.en-bølge {
+        position: relative;
+        top: 60px;
+    }
+
+    .topbillede img {
+        width: 100%;
+        position: relative;
+        top: 500px;
+        /*skubbe bølgen ned af*/
+    }
+
+
+    /*CARD STYLE: VORES UDVALG*/
+    .kortudvalg {
+        display: flex;
+        flex-direction: row;
+
+        border: 1px solid #cea948;
+        background-color: #204653;
+        color: #cea948;
+
+        border-radius: 22px;
+        height: 500px;
+
+        margin-bottom: 100px;
+
+        margin-right: 10%;
+        margin-left: 10%;
+    }
+
+    .kortudvalg div:first-child {
+        width: 125%;
+
+        border-radius: 20px;
+        border: 2px solid #cea948;
+        overflow: hidden;
+    }
+
+    .kortudvalg div:first-child img {
+        width: 100%;
+        height: 100%;
+
+
+
+        display: block;
+        transition: transform 2s;
+
+    }
+
+    .kortudvalg div:first-child img:hover {
+        transform: scale(1.1);
+
+    }
+
+    .kortudvalg div:nth-child(2) {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+
+        padding: 50px 40px;
+
+    }
+
+    .kortudvalg div:nth-child(2) h1 {
+        margin-bottom: 20px;
+    }
+
+    /*ØL MENU STYLES*/
+    .ølmenu {
+        background-image: url(images/dåser2.png);
+        /*billede skal måske skiftes*/
+        background-size: cover;
+        background-repeat: no-repeat;
+        /*opacity: 0.4;*/
+
+        height: 1300px;
+        width: 100%;
+
+    }
+
+    .ølliste {
+        display: flex;
+        justify-content: center;
+        justify-content: space-evenly;
+        text-align: left;
+
+    }
+
+    .faste-øl,
+    .nyeste-øl {
+        color: #CEA948;
+        background-color: #204653;
+        border: 1px solid #CEA948;
+
+        border-radius: 22px;
+
+        width: 35%;
+        text-align: left;
+
+        padding-bottom: 40px;
+
+    }
+
+    .faste-øl>p,
+    .nyeste-øl>p {
+        display: flex;
+        justify-content: right;
+        font-weight: 600;
+
+    }
+
+    ol li,
+    .faste-øl>p,
+    .nyeste-øl>p {
+        padding: 3% 5%;
+        list-style: none;
+    }
+
+    ol li div:nth-child(2) {
+        padding-right: 25%;
+    }
+
+    ol h3 {
+        color: #EDC458;
+        font-size: 14pt;
+
+    }
+
+    li>div:first-child {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    /*ØL MENU OVERSKRIFTER*/
+
+    .faste-øl h2,
+    .nyeste-øl h2 {
+        margin: 40px auto 10px;
+        text-align: center;
+        max-width: 600px;
+        position: relative;
+
+        background-color: #204653;
+        color: #EDC458;
+        font-size: 30pt;
+    }
+
+    .faste-øl h2:before,
+    .nyeste-øl h2:before {
+        content: '';
+        display: block;
+        width: 100px;
+        height: 1px;
+
+        background: #EDC458;
+        position: absolute;
+        left: 5%;
+        top: 50%;
+
+    }
+
+    .faste-øl h2:after,
+    .nyeste-øl h2:after {
+        content: '';
+        display: block;
+        width: 100px;
+        height: 1px;
+
+        background: #EDC458;
+        position: absolute;
+        right: 5%;
+        top: 50%;
+    }
 
 }
-
-.faste-øl, .nyeste-øl {
-    color: #CEA948;
-    background-color: #204653;
-    border:1px solid #CEA948;
-
-    border-radius: 22px;
-
-    width:35%;
-    text-align:left;
-
-    padding-bottom:40px;
-
-}
-
-.faste-øl > p, .nyeste-øl > p{
-    display: flex;
-    justify-content: right;
-    font-weight: 600;
-
-}
-
-ol li, .faste-øl > p, .nyeste-øl > p{
-    padding:3% 5%; 
-    list-style: none;
-}
-
-ol li div:nth-child(2){
-    padding-right: 25%;
-}
-
-ol h3{
-    color:#EDC458;
-    font-size: 14pt;
-   
-}
-
-li > div:first-child{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-/*ØL MENU OVERSKRIFTER*/
-
-.faste-øl h2, .nyeste-øl h2 {
-    margin: 40px auto 10px;
-    text-align: center;
-    max-width: 600px;
-    position: relative;
-
-    background-color: #204653;
-    color: #EDC458;
-    font-size: 30pt;
-}
-
-.faste-øl h2:before, .nyeste-øl h2:before {
-    content: '';
-    display: block;
-    width: 100px;
-    height: 1px;
-
-    background: #EDC458;
-    position: absolute;
-    left: 5%;
-    top: 50%;
-
-}
-
-.faste-øl h2:after, .nyeste-øl h2:after {
-    content: '';
-    display: block;
-    width: 100px;
-    height: 1px;
-
-    background: #EDC458;
-    position: absolute;
-    right:5%;
-    top: 50%;
-}
-
-
-
-
-
